--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
   <body>
     <div>Microblog:
         <a href="{{ url_for('microblog.index') }}">Home</a>
-        {% if g.user.is_authenticated() %}
+        {% if g.user.is_authenticated %}
         | <a href="{{ url_for('microblog.user', nickname=g.user.nickname) }}">Your Profile</a>
         | <a href="{{ url_for('microblog.logout') }}">Logout</a>
         {% endif %}
