--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div>Microblog:
-        <a href="{{ url_for('microblog.index') }}">Home</a>
+        <a href="{{ url_for('.index') }}">Home</a>
         {% if g.user.is_authenticated %}
-        | <a href="{{ url_for('microblog.user', nickname=g.user.nickname) }}">Your Profile</a>
-        | <a href="{{ url_for('microblog.logout') }}">Logout</a>
+        | <a href="{{ url_for('.user', nickname=g.user.nickname) }}">Your Profile</a>
+        | <a href="{{ url_for('.logout') }}">Logout</a>
         {% endif %}
     </div>
     <hr>
