--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,11 @@
             </tr>
         </table>
     </form>
-    {% for post in posts %}
-    <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
+    {% for post in posts.items %}
+        {% include 'post.html' %}
     {% endfor %}
+    {% if posts.has_prev %}<a href="{{ url_for('.index', page=posts.prev_num) }}" >&lt;&lt; Newer posts</a>
+    {% else %}Next posts{% endif %} |
+    {% if posts.has_next %}<a href="{{ url_for('.index', page=posts.next_num) }}" >Older posts &gt;&gt;</a>
+    {% else %}Older posts{% endif %}
 {% endblock %}
