--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Hi, {{ g.user.nickname }}!</h1>
-    <form action="" method="POST" name="post">
+    <form action="{{ url_for('.post') }}" method="POST" name="post">
         {{ form.hidden_tag() }}
         <table>
             <tr>
